* RELEASE 16B
- Zone of control changes
  - Allow land-to-sea and sea-to-land attacks, only using bombard stat
  - May be lethal
  - May be exerted by air units
  - Show attack animation even when attacker is not at the top of its stack
- Defensive bombard changes
  - May be lethal
  - May be performed by air units
  - Invisible, undetected units may be made immune
- Can use charm flag to control PTW-like artillery targeting
- Option to ignore king flag on defense, so kings aren't always last to defend in a stack
- Harbor/airport city icons indicate unit effects not trade abilities
- Fix incorrect ETAs in go-to mode when railroad movement is limited
- Option to remove Elvis Easter egg
- Match only complete names from config
- Improve config read error messages

* RELEASE 15
- Option to replay AI moves for human players in hotseat mode
- Enable stealth attacks via bombardment
- Artillery can be set to use PTW-like targeting against cities
- Recon missions can be made vulnerable to interception
- Option to charge one move for recon missions and interception
- Allow players to opt out of stealth attacks
- Polish precision striking by land or sea units
  - Use regular bombard animation instead of flying animation
  - Use bombard range instead of operational range
  - Cannot be intercepted
- Message appears after bomber dodges interception by air defense buildings
- Restore unit directions on game load
- Option to immunize aircraft against bombardment
- Disallow stealth attack against single unit by default
  - Fixes a compatibility issue with the EFZI mod
- L key unloads unit over activating AI city loc highlighter
- Show AI strategy in production ranking for unit types with multiple strategies
- Tweak messages on bankruptcy popups

* RELEASE 14
- Automatically cut research spending to avoid bankruptcy
- Option to aggressively penalize bankrupt players
  - Sells non-gold-generating buildings, non-free units, and switches city production to Wealth