@@ -265,8 +265,9 @@ ignore_king_ability_for_defense_priority = false
 ;   lethal: Attackers may be destroyed by defensive bombard if the bombarding unit has the appropriate lethal land/sea bombard ability.
 ;   aerial: Air units may perform defensive bombard if they can perform bombing missions.
 ;   not-invisible: Attacking units are immune to defensive bombard if they are invisible and not detected.
-; For example, to activate all options, set to [lethal aerial not-invisible]. The order of items in the list does not matter. You can also activate
-; all options by setting to [all] (with or without the brackets).
+;   blitz: Units with blitz may perform defensive bombard multiple times per turn, once for each move they have.
+; For example, to activate all options, set to [lethal aerial not-invisible blitz]. The order of items in the list does not matter. You can also
+; activate all options by setting to [all] (with or without the brackets).
 special_defensive_bombard_rules = []
 
 ; A list of modifications to the rules for zone of control, like above for defensive bombard. The possibilities are:
